<resources>
    <string name="app_name">Base</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleFragmentHome">Home</string>
    <string name="libraryTitleFragment">Library</string>
    <string name="theatresTitleFragment">In Theatres</string>
    <string name="accountTitleFragment">Account</string>
    <string name="search">Search</string>
    <string name="popularMovie">POPULAR</string>
    <string name="topRated">TOP RATED</string>
    <string name="add_to_watchlist">ADD TO WATCHLIST</string>
    <string name="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="description_movie_detail">DESCRIPTION</string>
    <string name="genre">genre</string>
    <string name="titleMovieDetail">Title</string>
    <string name="castMovieDetail">CAST</string>
    <string name="watch_list">WATCH LIST</string>
    <string name="favourites">FAVOURITES</string>
    <string name="userNotLoginYet">You need to login to your account to view this section</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="facebook_application_id" translatable="false">2529013863990063</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2529013863990063</string>
</resources>
