<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:fitsSystemWindows = "true"
            android:background="#00000000">
            <EditText
                app:layout_scrollFlags="noScroll"
                android:id="@+id/etSearch"
                android:background="@drawable/border_edittext"
                android:hint="@string/search"
                android:layout_width="match_parent"
                android:paddingStart="20dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp" />
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popularMovie"
                    android:textSize="25dp"
                    android:textColor="@color/colorTitleChoosed"
                    android:textStyle="bold"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/topRated"
                    android:textSize="25dp"
                    android:textColor="@color/colorTitleChoosed"
                    android:textStyle="bold"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopRateMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>