<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/llLibrary1"
                    android:layout_marginTop="250dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/key"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>
                    <TextView
                        android:textSize="25dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorIconTab"
                        android:text="@string/userNotLoginYet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    </LinearLayout>
                <LinearLayout
                    android:id="@+id/llLibrary2"
                    android:visibility="visible"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/watch_list"
                        android:textSize="25dp"
                        android:textColor="@color/colorTitleChoosed"
                        android:textStyle="bold"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvWatchListMovie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/favourites"
                        android:textSize="25dp"
                        android:textColor="@color/colorTitleChoosed"
                        android:textStyle="bold"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvFavouritesMovie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>