<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.MovieDetail">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/flBackDropMovieDetail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/llTwoButtonMovieDetail"
            android:layout_height="270dp">
            <ImageView
                android:id="@+id/ivBackDropMovieDetail"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/ivGradientSlideItem"
                android:layout_width="match_parent"
                android:src="@drawable/gradient"
                android:layout_height="match_parent"/>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/llTwoButtonMovieDetail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            >

            <ImageView

                android:id="@+id/ivMovieDetail"
                android:layout_width="170dp"
                android:layout_height="220dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/llThreeTextView"
                app:layout_constraintStart_toEndOf="@id/ivMovieDetail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tvTitleDetailMovie"
                android:layout_width="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                android:text="@string/titleMovieDetail"
                android:textSize="25sp"
                />

            <LinearLayout
                android:id="@+id/llThreeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="113dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivMovieDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivMovieDetail"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDetailMovie">

                <TextView
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tvReleaseDate"
                    android:background="@drawable/border_textview"                android:text="release date"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:text="@string/genre"
                    android:textColor="@color/colorWhite"
                    android:padding="5dp"
                    android:background="@drawable/border_textview"                android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvVote"
                    android:text="vote"
                    android:padding="5dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/border_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/llTwoButtonMovieDetail"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/flBackDropMovieDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <Button
                android:background="@drawable/border_textview"
                android:text="@string/add_to_watchlist"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="10dp"
                android:id="@+id/btAddToWatchList"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:background="@drawable/border_textview"
                android:text="@string/add_to_favourites"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:id="@+id/btAddToFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/description_movie_detail"
            android:textColor="@color/colorTitleChoosed"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTwoButtonMovieDetail" />
        <TextView
            android:id="@+id/tvDescriptionText"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCast"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
        <TextView
            android:id="@+id/tvCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/castMovieDetail"
            android:textColor="@color/colorTitleChoosed"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionText" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCastMovieDetail"
            app:layout_constraintTop_toBottomOf="@id/tvCast"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>